Fix SonarQube findings in SystemController and SpeedSorterController
Group SystemController's app.data.dir/project.version @Value fields into
a new AppConfig.AppInfo bean to bring the constructor under the 7-param
threshold (S107), run the shutdown task on a virtual thread instead of a
platform thread (S6881), and replace Collectors.toList() with .toList()
in SpeedSorterController (S6204).